# plcmonitor

./: CMakeLists.txt  README.md
cmake/: FindLibModbus.cmake  FindSnap7.cmake
configs/: devices.json  plc_config.json
docs/: PLC数据监控系统_产品介绍.pptx  PLC数据监控系统_使用说明书.md  PLC数据监控系统_公众号文章.md  用户手册_v1.1.md  通讯管理器重构方案.md
resources/: resources.qrc  styles.qss
resources/help/: user_manual.html
resources/styles/: dark.css  light.css  mac.css
src/: CMakeLists.txt
src/app/: CMakeLists.txt  ConnectionConfigDialog.h  ConnectionConfigDialog.ui  application - 副本.cpp  application.cpp  application.h  connectionconfigdialog.cpp  main.cpp  mainwindow - 副本.cpp  mainwindow - 副本20260519.cpp  mainwindow - 副本20260519.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_copy.cpp
src/comm/: CMakeLists.txt  commmanager.cpp  commmanager.h  iconnector.h  modbushelper.cpp  modbushelper.h  modbusrtuconnector.cpp  modbusrtuconnector.h  modbustcpconnector.cpp  modbustcpconnector.h  s7connector.cpp  s7connector.h
src/common/: CMakeLists.txt  common_types.h  configloader.cpp  configloader.h  databaseconfigdialog.cpp  logger.cpp  logger.h  logindialog.cpp  logindialog.h  simplecrypt.cpp  simplecrypt.h  usermanagedialog.cpp  usermanagedialog.h
src/core/: CMakeLists.txt  alarmmanager.cpp  alarmmanager.h  controller.cpp  controller.h  databasemanager.cpp  databasemanager.h  plcconnector.cpp  plcconnector.h  plcdata.cpp  plcdata.h  realtimedatamodel.cpp  realtimedatamodel.h  tagmanager.cpp  tagmanager.h  usermanager.cpp  usermanager.h
src/ui/dialogs/: CMakeLists.txt  ConnectionConfigDialog.h  DeviceConfigDialog.cpp  DeviceConfigDialog.ui  TagConfigDialog.cpp  TagConfigDialog.h  connectionconfigdialog.cpp  databaseconfigdialog.cpp  databaseconfigdialog.h  deviceconfigdialog.h  historyquerydialog.cpp  historyquerydialog.h  logindialog.ui  tagconfigdialog.ui  update_ui.py  usermanagedialog.cpp  usermanagedialog.h  usermanagedialog.ui  write_ui.py
src/ui/models/: CMakeLists.txt  ChartManager.h  TrendManager.h  alarmlistmodel.cpp  alarmlistmodel.h  chartmanager.cpp  devicetreemodel.cpp  devicetreemodel.h  processviewmanager.cpp  processviewmanager.h  realtimedatamodel.cpp  realtimedatamodel.h  realtimemanager.cpp  realtimemanager.h  trendmanager.cpp
src/view/: ProcessViewTypes.h
tools/: auto_mapping_from_svg.py  example_mapping.json
